[mirotalkc2c] - fix video wrap size 4 mobile

--- a/frontend/css/client.css
+++ b/frontend/css/client.css
@@ -17,7 +17,7 @@
     --border-radius: 1rem;
     --video-obj-fit: cover;
     --my-video-wrap-width: 360px; /* Safari */
-    --my-video-wrap-height: 210px;
+    --my-video-wrap-height: 205px;
     --settings-width: 280px;
     --chat-width: 320px;
     --btn-hover-scale: scale(1.1);
